--- a/genindex.html
+++ b/genindex.html
@@ -302,7 +302,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="spin_diffusion.html#module-magnumfe">magnumfe (module)</a>, <a href="open_boundary.html#module-magnumfe">[1]</a>, <a href="state.html#module-magnumfe">[2]</a>, <a href="field_terms.html#module-magnumfe">[3]</a>, <a href="llg.html#module-magnumfe">[4]</a>, <a href="meshing.html#module-magnumfe">[5]</a>
+  <dt><a href="state.html#module-magnumfe">magnumfe (module)</a>, <a href="open_boundary.html#module-magnumfe">[1]</a>, <a href="spin_diffusion.html#module-magnumfe">[2]</a>, <a href="field_terms.html#module-magnumfe">[3]</a>, <a href="llg.html#module-magnumfe">[4]</a>, <a href="meshing.html#module-magnumfe">[5]</a>
   </dt>
 
       
