--- a/getting_started.html
+++ b/getting_started.html
@@ -235,7 +235,7 @@
 <span class="p">])</span>
 
 <span class="n">logfile</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="s">&quot;sp4_fk.dat&quot;</span><span class="p">,</span> <span class="s">&quot;w&quot;</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span>
-<span class="n">t</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">T</span> <span class="o">=</span> <span class="mf">0.0</span><span class="p">,</span> <span class="mf">2e-13</span><span class="p">,</span> <span class="mf">1e-9</span>
+<span class="n">dt</span><span class="p">,</span> <span class="n">T</span> <span class="o">=</span> <span class="mf">2e-13</span><span class="p">,</span> <span class="mf">1e-9</span>
 
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">T</span> <span class="o">/</span> <span class="n">dt</span><span class="p">)):</span>
 
